syntax = "proto3";

package chainmetric.identity.presenter;

option go_package = "github.com/timoth-y/chainmetric-contracts/src/identity/api/presenter";

import "identity/api/presenter/user.proto";
import "validate/validate.proto";


message AuthRequest {
  string email = 1 [(validate.rules).string = {email: true}];
  string passcode = 2 [(validate.rules).string = {min_bytes: 8}];
}

message SetPasswordRequest {
  string prevPasscode = 1;
  string newPasscode = 2 [(validate.rules).string = {min_bytes: 8}];
}

message VaultSecret {
  string token = 1;
  string path = 2;
}

message AuthResponse {
  User user = 1;
  VaultSecret secret = 2;
  string accessToken = 3;
}
